[tool.poetry]
name = "oaziz-test"
version = "0.1.0"
description = ""
authors = ["VAA <VasilyevAA>"]
readme = "README.md"
packages = [{include = "oaziz_test"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.1"
pytest = "^7.2.0"
pytest-asyncio = "^0.20.3"
loguru = "^0.6.0"
allure-pytest = "^2.12.0"
datatest = "^0.11.1"
web3 = "^5.31.3"
faker = "^15.3.4"
ulid-py = "^1.1.0"
addict = "^2.4.0"
dpath = "^2.1.3"
pycountry = "^22.3.5"
phonenumbers = "^8.13.3"
faker-e164 = "^0.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
