[tool.poetry]
name = "oaziz-test"
version = "0.1.0"
description = ""
authors = ["VAA <VasilyevAA>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
pytest = "^7.2.0"
loguru = "^0.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
